# OPOSSUM

./: CMakeLists.txt  README.md  config.json
docs/: Doxyfile.in
src/: CMakeLists.txt
src/base/: Analyser.cxx  Analyser.h  Analysis.h  BaseLinkDef.h  CMakeLists.txt  EventMixer.cxx  EventMixer.h  FemtoMixer.cxx  FemtoMixer.h  GenericResult.cxx  GenericResult.h  PairCut.h  Particle.h  Result.cxx  Result.h  TrackCut.h  analyse_events.cxx  femto_analysis.cxx
src/base/analyses/: FemtoAnalysis.cxx  FemtoAnalysis.h
src/base/femto/: CF.h  CF1D.cxx  CF1D.h  FemtoConstants.hxx  LCMS.cxx  LCMS.h  TPIWeightGenerator.cxx  TPIWeightGenerator.h  WeightGenerator.h
src/cuts/: CMakeLists.txt  EventCut.cxx  EventCut.h
src/readers/: CMakeLists.txt  Reader.h  ReadersLinkDef.h  UEvent.h  UnigenEventCandidate.cxx  UnigenEventCandidate.h  UnigenParticleCandidate.cxx  UnigenParticleCandidate.h  UnigenReader.cxx  UnigenReader.h  read_events.cxx
src/selection/: CMakeLists.txt  EventCandidate.cxx  EventCandidate.h  GenericCandidate.h  ObservableList.h  PairCandidate.cxx  PairCandidate.h  ParticleSelector.cxx  ParticleSelector.h  ParticleSelectorLinkDef.h  TrackCandidate.cxx  TrackCandidate.h  select_events.cxx  selection.json
src/selection/cuts/: CutList.h  EventCut.cxx  EventCut.h  PairCut.cxx  PairCut.h  TrackCut.cxx  TrackCut.h
src/selection/cuts/eventCuts/: JJEventCut.cxx  JJEventCut.h
src/selection/cuts/pairCuts/: JJPairCut.cxx  JJPairCut.h
src/selection/cuts/trackCuts/: JJTrackCut.cxx  JJTrackCut.h
src/utils/: ArgumentParser.h  CMakeLists.txt  ConfigParser.cxx  ConfigParser.h  CutEntry.cxx  CutEntry.h  CutParser.cxx  CutParser.h  Logger.h  ProgressBar.h  cutMapping.json
